--- a/FortnoxProductiveIntegration/FortnoxProductiveIntegration.csproj
+++ b/FortnoxProductiveIntegration/FortnoxProductiveIntegration.csproj
@@ -9,5 +9,9 @@
       <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Helpers" />
+    </ItemGroup>
+
 
 </Project>
