--- a/FortnoxProductiveIntegration/FortnoxProductiveIntegration.csproj
+++ b/FortnoxProductiveIntegration/FortnoxProductiveIntegration.csproj
@@ -7,11 +7,7 @@
     <ItemGroup>
       <PackageReference Include="Fortnox.NET.SDK" Version="4.0.4" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Helpers" />
-      <Folder Include="Resources" />
+      <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0" />
     </ItemGroup>
 
 
