--- a/FortnoxProductiveIntegration/FortnoxProductiveIntegration.csproj
+++ b/FortnoxProductiveIntegration/FortnoxProductiveIntegration.csproj
@@ -8,6 +8,11 @@
       <PackageReference Include="Fortnox.NET.SDK" Version="4.0.4" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
       <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0" />
+      <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Logs" />
     </ItemGroup>
 
 
