--- a/FortnoxProductiveIntegration/FortnoxProductiveIntegration.csproj
+++ b/FortnoxProductiveIntegration/FortnoxProductiveIntegration.csproj
@@ -7,6 +7,8 @@
     <ItemGroup>
       <PackageReference Include="Fortnox.NET.SDK" Version="4.0.4" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+      <PackageReference Include="Quartz.Extensions.Hosting" Version="3.2.1" />
       <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0" />
       <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
     </ItemGroup>
