--- a/FortnoxProductiveIntegration/appsettings.json
+++ b/FortnoxProductiveIntegration/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Quartz": {
+    "HelloWorldJob": "0/5 * * * * ?",
+    "SecondJob": "0/5 * * * * ?"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
