--- a/FortnoxProductiveIntegration/appsettings.json
+++ b/FortnoxProductiveIntegration/appsettings.json
@@ -1,7 +1,15 @@
 {
   "Quartz": {
-    "HelloWorldJob": "0/5 * * * * ?",
-    "SecondJob": "0/5 * * * * ?"
+    "HelloWorldJob": "0/20 * * * * ?",
+    "SecondJob": "0/20 * * * * ?"
+  },
+  "Fortnox": {
+    "AccessToken": "5f5826c7-41f3-4784-bd36-5d3f95709959",
+    "ClientSecret": "WTGWLoVtqW"
+  },
+  "Productive" : {
+    "X-Auth-Token": "f3dbdb72-9919-4726-8441-8cd41b58e119",
+    "X-Organization-Id": "15066"
   },
   "Logging": {
     "LogLevel": {
