rename cron jobs

--- a/FortnoxProductiveIntegration/appsettings.json
+++ b/FortnoxProductiveIntegration/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Quartz": {
-    "HelloWorldJob": "0/20 * * * * ?",
+    "FortnoxCreatingNewInvoices": "0/20 * * * * ?",
     "SecondJob": "0/20 * * * * ?"
   },
   "Fortnox": {
