rename sheduler jobs

--- a/FortnoxProductiveIntegration/appsettings.json
+++ b/FortnoxProductiveIntegration/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Quartz": {
     "FortnoxCreatingNewInvoices": "0/20 * * * * ?",
-    "SecondJob": "0/20 * * * * ?"
+    "PaidProductiveInvoices": "0/20 * * * * ?"
   },
   "Fortnox": {
     "AccessToken": "5f5826c7-41f3-4784-bd36-5d3f95709959",
